examples/test/testpolicy12100.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12100
  namespace: namespace162
spec:
  podSelector:
    matchLabels:
      key15: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value12
          key31: value14
          key26: value28
      podSelector:
        matchLabels:
          key20: value2
